--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-sass --update src/index.sass:dist/index.css --style compressed
+sass --update src/index.sass:dist/mygracss.min.css --style compressed
